--- a/demo/app/build.gradle
+++ b/demo/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.squareup.okhttp3:okhttp:3.9.0'
     implementation 'com.squareup.okio:okio:1.13.0'
+    implementation 'com.getkeepsafe.relinker:relinker:1.4.1'
 }
